--- a/index.html
+++ b/index.html
@@ -1,75 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>panda ecommerce</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-   
-</head>
-<body>
-    <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                  <img src="images/logo.png" alt="">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Backpsck</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">subscribe</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-               <div class="carousel-inner">
-                   <div class="carousel-item-active">
-                       <div class="row">
-                           <div class="col-md-7">
 
-                           </div>
-                           <div class="col-md-5">
-                            <img src="images/tv.png" class="d-block w-100" alt="...">
-                           </div>
-                       </div>
-                   </div>
-               </div>
-              </div>
-              <div class="carousel-item">
-                <img src="images/xbox.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="images/xbox.png" class="d-block w-100" alt="...">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>panda ecommerce</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+  <header class="container">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#shoes">Shoes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Backpack">Backpack</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#subscribe" tabindex="-1" aria-disabled="true">subscribe</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div id="carouselExampleControls" class="carousel slide panda-pic mt-5 " data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="carousel-inner">
+            <div class="carousel-item-active">
+              <div class="row d-flex align-items-center p-5">
+                <div class="col-md-7">
+                  <h1>MEGA LCD TV FOR SPORTS</h1>
+                  <P>this is the best tv in the world, anyone can fell the moment of sports</P>
+                  <h3>$1200</h3>
+                  <button class="btn btn-warning">Buy now>></button>
+                </div>
+                <div class="col-md-5">
+                  <img src="images/tv.png" class="d-block w-100" alt="...">
+                </div>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </a>
           </div>
-    </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        </div>
+        <div class="carousel-item">
+          <div class="row d-flex align-items-center p-5">
+            <div class="col-md-7">
+              <h1>COOL DUDE HEADPHOE</h1>
+              <P>this is the best headphone in the world, anyone can fell the moment of sports</P>
+              <h3>$200</h3>
+              <button class="btn btn-warning">Buy now>></button>
+            </div>
+            <div class="col-md-5">
+              <img src="images/headphone.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row d-flex align-items-center p-5">
+            <div class="col-md-7">
+              <h1>MEGA VITUAL GAMING BOX</h1>
+              <P>this is the best game box in the world, anyone can fell the moment of sports</P>
+              <h3>$800</h3>
+              <button class="btn btn-warning">Buy now>></button>
+            </div>
+            <div class="col-md-5">
+              <img src="images/xbox.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+  </header>
+  <main class="container">
+    <section class="container overflow-hidden mt-5 catagories">
+      <div class="row g-5">
+        <div class="col">
+          <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around">
+            <h1 class="text-white">watch</h1>
+            <img src="images/watch.png" alt="">
+
+          </div>
+        </div>
+        <div class="col">
+          <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around">
+            <h1 class="text-white">bag</h1>
+            <img src="images/bag.png" alt="">
+
+          </div>
+        </div>
+        <div class="col">
+          <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around">
+            <h1 class="text-white">Shoes</h1>
+            <img src="images/shoes.png" alt="">
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <section class="mt-5">
+      <h3>shoes</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div  id="shoes" class="col shadow">
+          <div class="card h-100 panda">
+            <img src="images/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body ">
+              <h5 class="card-title">supply 350</h5>
+              <h5>$180</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer foot panda">
+              <div class="btn btn-warning">buy now>></div>
+            </div>
+          </div>
+        </div>
+        <div class="col shadow">
+          <div class="card h-100 panda">
+            <img src="images/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">nike 009 </h5>
+              <h5>$160</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer foot panda">
+              <div class="btn btn-warning">buy now>></div>
+
+            </div>
+          </div>
+        </div>
+        <div class="col shadow">
+          <div class="card h-100 panda">
+            <img src="images/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red airmax</h5>
+              <h5>$120</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer foot panda">
+              <div class="btn btn-warning">buy now>></div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mt-5">
+      <h3>Backpack</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div id="Backpack" class="col shadow">
+          <div class="card h-100 panda">
+            <img src="images/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red bag 350</h5>
+              <h5>$340</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer foot panda">
+              <div class="btn btn-warning">buy now>></div>
+            </div>
+          </div>
+        </div>
+        <div class="col shadow">
+          <div class="card h-100 panda">
+            <img src="images/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Blue bag 009 </h5>
+              <h5>$240</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer foot panda">
+              <div class="btn btn-warning">buy now>></div>
+
+            </div>
+          </div>
+        </div>
+        <div class="col shadow">
+          <div class="card h-100 panda">
+            <img src="images/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Black airmax</h5>
+              <h5>$120</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer foot panda">
+              <div class="btn btn-warning">buy now>></div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section style="height: 300px;" id="subscribe" class="bg-warning mt-5 d-flex align-items-center d-flex justify-content-center">
+      <div>
+        <h1>LET'S STAY IN TOUCH</h1>
+        <h5>get updates on sale, specials more</h5>
+        <input type="text" placeholder="enter your email address" id="">
+        <button class="btn btn-success br-10">SUBMIT</button>
+      </div>
+    </section>
+  </main>
+  <footer class="text-center mt-5">
+    <small> @2022-Panda commerce. All right reserved. Sufia Bulgaria</small>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
